Changes in js and css file

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,5 +5,8 @@
 </head>
 <body>
     {% block content %}{% endblock %}
+
+    <!---JS-->
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
