--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -1,15 +1,22 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<h2>Admin Login</h2>
 
-{% if error %}
-<p style="color:red">{{ error }}</p>
-{% endif %}
+<div class="login-container">
+    <div class="login-card">
+        <h2>Admin Login</h2>
 
-<form method="POST">
-    <input type="text" name="username" placeholder="Username" required><br><br>
-    <input type="password" name="password" placeholder="Password" required><br><br>
-    <button type="submit">Login</button>
-</form>
+        {% if error %}
+            <p class="error">{{ error }}</p>
+        {% endif %}
+
+        <form method="POST">
+            <input type="text" name="username" placeholder="Username" required>
+            <input type="password" name="password" placeholder="Password" required>
+
+            <button type="submit">Login</button>
+        </form>
+    </div>
+</div>
+
 {% endblock %}
